Set width on playlist info to prevent long titles from stretching it out

--- a/src/styles/Playlist.css
+++ b/src/styles/Playlist.css
@@ -12,6 +12,7 @@
   line-height: 3.2rem;
   padding: 40px 20px 40px 40px;
   text-align: center;
+  width: 300px;
 }
 
 .album-details img,
